--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,4 +1,4 @@
-image: /images/me.png
+image: images/me.png
 name: Victoria Michalska
 location: New York, NY
 description: creator of the Grape-Academic-Theme! Grape-Academic-Theme is a modification of the Grape-Theme by naye0ng, making it more suitable as an academic portfolio.
